# aidar

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  aidar.db-shm  aidar.db-wal  blogs_1.csv  blogs_2.csv  compact.md  domain_exclude.txt  domains.txt  litestream.yml  pyproject.toml  requirements.txt  test.txt  test_engine.py  test_regex.py
.github/workflows/: scan-cron.yml
docs/: HN_RUNBOOK.md  PATTERN_CATALOG.md
patterns/: _weights.yaml
patterns/emoji/: emoji_density.yaml
patterns/models/: claude.yaml  gemini.yaml  gpt4.yaml
patterns/phrases/: ai_idioms.yaml  challenges_future_template.yaml  filler_openers.yaml  hedging.yaml  llm_markup_artifacts.yaml  llm_placeholder_tokens.yaml  llm_reference_artifacts.yaml  llm_tracking_parameters.yaml  notability_media_overattribution.yaml  second_person_address.yaml  transition_overload.yaml
patterns/punctuation/: ellipsis.yaml  em_dash.yaml  semicolons.yaml
patterns/structure/: bullet_density.yaml  header_frequency.yaml  paragraph_uniformity.yaml  question_avoidance.yaml  sentence_burstiness.yaml
patterns/tropes/: ai_section_headers.yaml  ai_writing_tropes.yaml  bold_first_bullets.yaml  negative_parallelism.yaml  short_punchy_fragments.yaml  tricolon_abuse.yaml
patterns/vocabulary/: ai_word_choice_tropes.yaml  formal_register.yaml  rare_word_density.yaml  type_token_ratio.yaml  word_freq_variance.yaml
scripts/: db-cleanup-excluded.sh  domains-daily-sync.sh  force-push-to-r2.sh  hn-daily-sync.sh  pull-from-r2.sh  push-to-r2.sh  run-track.sh  start.sh  track-and-sync.sh
scripts/lib/: env.sh
src/aidar/: __init__.py  __main__.py
src/aidar/cli/: analyze.py  compare.py  discover.py  main.py  patterns.py  scan.py  track.py  worker.py
src/aidar/core/: analyzer.py  comparator.py  fetcher.py  hn.py  scorer.py
src/aidar/db/: database.py  queries.py
src/aidar/models/: config.py  pattern.py  result.py
src/aidar/output/: formatters.py  renderer.py
src/aidar/patterns/: loader.py  registry.py
src/aidar/patterns/detectors/: base.py  frequency_detector.py  html_regex_detector.py  linguistic_detector.py  regex_detector.py  structural_detector.py
web/: main.py
web/static/: style.css
web/templates/: about.html  base.html  domain.html  domain_missing.html  index.html  patterns.html
