[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidar"
version = "0.1.0"
description = "Track stylistic patterns across the web to surface AI-era writing trends"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["ai-detection", "nlp", "cli", "text-analysis", "stylometry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "trafilatura>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[project.scripts]
aidar = "aidar.cli.main:aidar"

[tool.hatch.build.targets.wheel]
packages = ["src/aidar"]

[tool.hatch.build.targets.wheel.shared-data]
"patterns" = "aidar/patterns_data"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
